Version: 2.1.11
Date: ???
  Changes:
    - light oil 2 no longer unlocks medium distillates to stripped distillates twice.
    - soot recipes now unlock filtering on their results, so you can filter silver plates on splitters now without workarounds or researching silver first.
    - Drilling fluid mk04 now correctly requires military tech.
---------------------------------------------------------------------------------------------------
Version: 2.1.10
Date: 2023-9-3
  Changes:
    - added desulfurizator-unit-mk04
    - added grease table mk04
    - deleted empty, unused techs. heavy oil mk3 & petroleum gas processing mk3
    - fixed that kevlar mk02 did not allow productivity when kevlar mk01 allowed it.
    - added circuit connectivity to Oil Sand Extractors (credit: JStMorgan)
---------------------------------------------------------------------------------------------------
Version: 2.1.9
Date: 2023-7-25
  Changes:
    - update chinese translation. credit sdqwo
    - tweaked the aromatics from naphthalene oil recipe. increased naphthalene oil input( 50 -> 75). increased aromatics output(30 -> 40)
---------------------------------------------------------------------------------------------------
Version: 2.1.8
Date: 2023-4-16
  Changes:
    - Prevent a crash when another mod deletes the stone resource prototype.
---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2023-3-28
  Changes:
    - Added migration to ensure existing bitumen seeps are set to sane amounts
    - naphthalene creosote recipe to creosote tech
    - moved pure nat gas recipe to filter machine
    - buffed nat gas output from raw gas recipe
  Bugfixes:
    - Fixed case where removing a seep via editor would cause a crash
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2023-1-31
  Changes:
    - fixed crashes with bitumen